<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/intermediate_logo"
                    android:src="@drawable/ic_logo"/>

                <TextView
                    android:id="@+id/tv_app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/fredoka_semibold"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/progress_home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/black" />

    <TextView
        android:id="@+id/tv_no_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/no_internet"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/show_camera_and_gallery_menu"
        style="@style/customFloatingAdd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:translationY="-80dp"
        android:contentDescription="@string/upload_story_with_camera"
        style="@style/customFloatingCamera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:translationY="-160dp"
        android:contentDescription="@string/upload_story_with_gallery"
        style="@style/customFloatingPicture" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
