<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_to_previous_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/fredoka_semibold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/intermediate_logo"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/line_color"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_name">

        <com.example.intermediate.ui.customview.EmailInput
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/line_color"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_email"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_email_input">

        <com.example.intermediate.ui.customview.PasswordInput
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/line_color"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_password">

        <com.example.intermediate.ui.customview.PasswordInput
            android:id="@+id/ed_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/line_color"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/confirm_password"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_confirm_password" />
</androidx.constraintlayout.widget.ConstraintLayout>
