<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/fredoka_semibold"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/img_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_profile_placeholder"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_avatar"
        android:contentDescription="@string/user_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/fredoka_semibold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/img_profile_placeholder"
        tools:text="Nama Pengguna" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_medium"
        android:textSize="14sp"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
        tools:text="Email Pengguna" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="24dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_email" />

    <LinearLayout
        android:id="@+id/ll_language_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/view_divider">

        <ImageView
            android:id="@+id/img_language_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_language"
            android:contentDescription="@string/change_language"/>

        <TextView
            android:id="@+id/tv_language_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_medium"
            android:layout_gravity="center_vertical"
            android:text="@string/change_language"
            android:textSize="14sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/ll_language_setting">

        <ImageView
            android:id="@+id/img_logout_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout"/>

        <TextView
            android:id="@+id/tv_logout_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_medium"
            android:layout_gravity="center_vertical"
            android:text="@string/logout"
            android:textSize="14sp"
            android:textColor="@color/red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
